--- a/idolsns/src/main/resources/templates/emailPW.html
+++ b/idolsns/src/main/resources/templates/emailPW.html
@@ -8,6 +8,8 @@
             <span id="custom-email-target">???</span>
             <br>
             임시비밀번호로 로그인 후 비밀번호 변경을 해주세요.
+            <br>
+            <a href="http://localhost:8080/member/login"id="custom-email-link">로그인</a>
         </div>
     </div>
 </div>
