기본 css 디자인

--- a/front/components.css
+++ b/front/components.css
@@ -194,6 +194,39 @@
 }
 
 /*
+    검색창(form-input-search)
+    - 검색창은 부모 div(search-box), 자식 input(search-input)으로 만듭니다.
+    - 예시
+        <div class="row">
+            <div class="search-box">
+                <input class="search-input w-100">
+            </div>
+        </div>
+*/
+.search-box {
+    border: 0.3px solid #b3b9b8;
+    border-radius: 100px;
+    display: flex;
+    background-image: url("../image/search.png");
+    background-size: auto 45%;
+    background-repeat: no-repeat;
+    background-position: 13px center;
+    box-shadow: 0px 0px 3px 0px #e6e8e7 inset;
+}
+.search-input {
+    color: #22201e;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 40px;
+    border: none;
+    outline: none;
+    background: none;
+    height: 18.4px;
+    line-height: 18.4px;
+}
+
+/*
     고정태그 디자인
 */
 .fixed-tag {
