--- a/idolsns/src/main/resources/static/css/doo.css
+++ b/idolsns/src/main/resources/static/css/doo.css
@@ -4,3 +4,32 @@
 .max-width-100 {
     max-width: 100%;
 }
+
+
+.custom-shadow {
+    box-shadow: 0px 3px 4px rgba(3, 21, 17, 0.1);
+}
+
+.custom-title {
+       font-weight:bold;
+    padding-left: 12px;
+   }
+.custom-border-box {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    border: 0.3px solid #dee2e6;
+    padding: 16px;
+    border-radius: 0.5rem;
+}
+.custom-hr {
+    margin-top: 16px;
+    margin-bottom: 16px;
+    background-color: #dee2e6;
+    height: 0.3px;
+}
+.custom-container {
+    box-shadow: 0px 3px 4px rgba(3, 21, 17, 0.1);
+    background-color: white;
+    padding: 24px;
+    border-radius: 0.5rem;
+}
