--- a/idolsns/src/main/resources/static/css/load.css
+++ b/idolsns/src/main/resources/static/css/load.css
@@ -3,8 +3,15 @@
 
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
+* {
+	font-family: 'Pretendard', sans-serif !important;
+	}
+
+
+/*
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 
 * {
-	  font-family: 'Pretendard', sans-serif !important;
-}
-
+	font-family: "Noto Sans KR", sans-serif !important;
+	}
+*/
