--- a/idolsns/src/main/resources/static/css/load.css
+++ b/idolsns/src/main/resources/static/css/load.css
@@ -1,4 +1,4 @@
 @charset "UTF-8";
 
 
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
