회원관련 페이지 디자인

--- a/idolsns/src/main/resources/templates/email.html
+++ b/idolsns/src/main/resources/templates/email.html
@@ -1,13 +1,14 @@
-<div style="box-sizing: border-box; border: 1px solid black;">
-    <div style="padding:20px">
-        <h1 id="custom-email-title">제목</h1>
-
-        <div style="background-color: rgba(0,0,0,0.1); padding:15px;">
-            STARLINK에서 발송한 인증번호입니다.
+<div style="box-sizing: border-box; border: none; max-width: 600px; margin: 0 auto; font-family: Arial, sans-serif; background-color: #f5f5f5; padding: 20px;">
+    <div style="border-bottom: 2px solid #dddddd; margin-bottom: 20px;"></div>
+    <div style="padding: 20px;">
+        <h1 id="custom-email-title" style="color: #333333; font-size: 24px; font-weight: bold; margin-top: 0;">starlink에서 발송한 인증번호입니다.</h1>
+		<br>
+        <div style="background-color: rgba(0, 0, 0, 0.1); padding: 15px; color: #666666; font-size: 16px; line-height: 1.5;">
+            안녕하세요. 스타링크를 방문해주셔서 감사합니다.<br>
+            아래 '인증번호'를 확인 후 회원가입 페이지에 올바르게 입력해주세요.<br>
+            감사합니다.<br>
             <br>
-            <span id="custom-email-target">???</span>
-            <br>
-            인증번호 입력칸에 입력하세요.
+            <span id="custom-email-target">???</span><br>
         </div>
     </div>
 </div>
