--- a/idolsns/src/main/resources/static/css/doo.css
+++ b/idolsns/src/main/resources/static/css/doo.css
@@ -97,10 +97,10 @@
 .custom-tab-list {
   background-color: inherit;
   float: left;
-    border-bottom: 0.5px solid #dee2e6;
+  border-bottom: 0.5px solid #dee2e6;
   outline: none;
   cursor: pointer;
-  padding: 15px 15px;
+  padding: 15px;
   transition: 0.3s;
   font-size: 17px;
   list-style: none; /* 불렛포인트 없애기 */
@@ -111,10 +111,9 @@
 .custom-tab-list:not(.active) * {
   text-decoration: none;
   color: #333;
-  
 }
 .custom-tab-list.active a {
-color: #6A53FB;
+ color: #6A53FB;
  font-weight:bold;
  text-decoration: none;
 }
