채팅방 시간 표시 포멧 변경

--- a/idolsns/src/main/resources/static/css/chat.css
+++ b/idolsns/src/main/resources/static/css/chat.css
@@ -369,6 +369,12 @@ scrollbar-width: none;
 	text-overflow: ellipsis;
 	word-break: break-all;
 }
+.hide-overflow {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	word-break: break-all;
+}
 
 .profileImg {
 	border-radius: 100px;
